--- a/public/login.html
+++ b/public/login.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="style.css" />
         <title>Account</title>
         <link rel="stylesheet" href="https://use.typekit.net/fpm8fms.css">
-        <script type="module" src="/public/index.js"></script>
+        <script type="module" src="./index.js"></script>
     </head>
     <body>
         <nav class="navDiv">
@@ -70,7 +70,7 @@
             </div>
             <div id="acctDiv" style="visibility: hidden;">
                 <div class="titleDiv">
-                    <h1 class="title">Welcome,&nbsp <p style="display:inline;" id="username"></p></h1>
+                    <h1 class="title">Welcome,&nbsp <p style="display:inline;" id="username"></p>!</h1>
                 </div>
                 <div id="userInfo">
                     <div id="emailDiv" class="acctDetailsDiv">
