email verification works

--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
                 <button type="button" id="signUpButton" class="button">Explore More</button> 
             </a>
         </div>
-        <div class="footer" style="text-align: center;">
+        <div class="footer">
             <hr style="margin-top: 75px;"></hr>
             <p class="footerText">©2024 Cody Casanave</p>
             <img class="footerImage" src="https://firebasestorage.googleapis.com/v0/b/cody-cooks.appspot.com/o/Media%2FLOGOS%2FCODYCOOKS.png?alt=media&token=fca0391f-c5fb-4133-8fde-4b9bcd8e5e1a">
