--- a/public/login.html
+++ b/public/login.html
@@ -37,7 +37,7 @@
                         <button class="button" id="loginButton">Login</button> 
                     </div>
                     <div class="switchLoginSignup">
-                        <p style="font-family: 'Courier', 'Sans';">Don't have an account?&nbsp<p id="createAcctLink" onclick="createAcctLink()">Create one here</p></p>
+                        <p class="linkNextToText" style="font-family: 'Courier', 'Sans';">Don't have an account?&nbsp<p id="createAcctLink" class="link" onclick="createAcctLink()">Create one here</p></p>
                     </div>
                     <div id="loginErrorDiv" class="loginSignupErrorDiv">
                         <p id = "loginErrorMessage"></p>
@@ -62,7 +62,7 @@
                     <button class="button" id="signupButton">Signup</button> 
                 </div>
                 <div class="switchLoginSignup">
-                    <p style="font-family: 'Courier', 'Sans';">Already have an account?&nbsp<p id="loginLink" onclick="loginLink()">Login here</p></p>
+                    <p class="linkNextToText" style="font-family: 'Courier', 'Sans';">Already have an account?&nbsp<p id="loginLink" class="link" onclick="loginLink()">Login here</p></p>
                 </div>
                 <div id="signupErrorDiv" class="loginSignupErrorDiv">
                     <p id = "signupErrorMessage"></p>
@@ -83,9 +83,27 @@
                 </div>
                 <div class="buttonDiv">
                     <div class="spacer" style="margin-top:50px"></div>
-                    <button class="button" id="logoutButton">Log Out</button> 
+                    <button class="button" id="logoutButton1">Log Out</button>
                 </div>
                 
+            </div>
+            <div id="unverifiedDiv" style="position: absolute; visibility: hidden; top:50px; width:100%;">
+                <div class="titleDiv">
+                    <h1 class="title">Verify Your Email</h1>
+                </div>
+                <div id="verifyEmailDiv">
+                    <div>
+                        <p style="font-family: 'Courier', 'sans'; text-align: center;">Please check your email for an email verification link.
+                            Once you click the link, you will be able to access your account!</p>
+                    </div>
+                    <div style="width: max-content; margin-left: auto; margin-right: auto;">
+                        <p id="verifyEmail" class="link" onclick="reloadLink()">Click here<p class="linkNextToText">&nbsponce email is verified</p></p>
+                    </div>
+                </div>
+                <div class="buttonDiv">
+                    <div class="spacer" style="margin-top:50px"></div>
+                    <button class="button" id="logoutButton2">Log Out</button>
+                </div>
             </div>
             
             <div class="footer">
@@ -106,6 +124,10 @@
                 document.getElementById("signupDiv").style.visibility = "hidden";
                 document.getElementById("loginDiv").style.visibility = "visible";
                 document.getElementById("signupErrorMessage").innerHTML = "";
+            }
+
+            function reloadLink () {
+                window.location.reload();
             }
         </script>
     </body>
